Removing Java compiler warnings for version 14.